src/test/ui/lazy_normalization_consts/feature-gate-lazy_normalization_consts.stderr
error: generic parameters may not be used in const operations
  --> $DIR/feature-gate-lazy_normalization_consts.rs:6:23
   |
LL |     let _: [u8; sof::<T>()];
   |                       ^ cannot perform const operation using `T`
   |
   = note: type parameters may not be used in const expressions
   = help: use `#![feature(const_generics)]` and `#![feature(const_evaluatable_checked)]` to allow generic const expressions

error: aborting due to previous error

