src/test/ui/lazy_normalization_consts/feature-gate-lazy_normalization_consts.rs
pub const fn sof<T>() -> usize {
    10
}

fn test<T>() {
    let _: [u8; sof::<T>()];
    //~^ ERROR generic parameters may not be used in const operations
}

fn main() {}
